Fix progress bar, project alignment (CSS) and project display on creation

--- a/templates/static/css/light.css
+++ b/templates/static/css/light.css
@@ -312,7 +312,7 @@ label {
 }
 
 button {
-    border-radius: 0
+    border-radius: 5px;
 }
 
 button:focus:not(:focus-visible) {
